add to gh-pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "razbor",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alym9668.github.io/todo-list",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
